--- a/src/Component/Home/style.css
+++ b/src/Component/Home/style.css
@@ -86,7 +86,7 @@
 .Purches_form{
     /* display: flex;
     justify-content: center; */
-    margin: 5% 5% 5% 5%; 
+    margin: 5% ; 
   
 }
 .Purches {
